correct heading font weight and letter spacing

--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -1,5 +1,6 @@
 h1, h2, h3, h4, h5, h6 {
   text-transform: uppercase;
+  letter-spacing: 0.0325rem;
 }
 
 
